# CoreProject

./: .eslintignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  CONTRIBUTING.md  CREDITS.md  Caddyfile  DEPLOYING.md  FAQ.md  LICENSE  Logo.html  Pipfile  README.md  caddy.exe.REMOVED.git-id  django.vcl  docker-compose.yml  gen_frontend.py  package-lock.json  pyproject.toml  server.py
backend/: .env.example  .eslintrc.cjs  .flake8  .gitignore  .pdm.toml  .prettierignore  .prettierrc  .pylintrc  ARCHITECTURE.rst  Dockerfile  Pipfile  README.md  TODO  alembic.ini  beat_entrypoint.sh  database.py  dictionary.py  dump.rdb  entrypoint.sh  main.py  mypy.ini  package-lock.json  package.json  pnpm-lock.yaml  preview_architecture.py  pyproject.toml  pyproject.toml.torrent  run_aiohttp.py  server.py  server_entrypoint.sh  settings.py  sqlite.db  svelte.config.js  tailwind.config.js  tailwind.config.ts  test.json  test.py  test_2.py  tsconfig.json  uwsgi.ini  (+4 more)
backend/aiohttp_core/: database.py  server.py
backend/aiohttp_core/models/: user.py
backend/aiohttp_core/templates/: index.html
backend/aiohttp_core/user/: avatar.py
backend/aiohttp_core/views/: index.py
backend/alembic/: env.py
backend/alembic/versions/: 3e86374fc933_create_inital_tables.py  83339d682fd4_.py
backend/api/: __init__.py
backend/api/user/: sign_up.py
backend/api/v1/: .gitignore
backend/apps/__anime__/: apps.py
backend/apps/__discord__/: apps.py
backend/apps/__flatpages__/: admin.py  apps.py
backend/apps/__user__/: admin.py  api.py  apis.py  apps.py  backends.py  forms.py  managers.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/apps/_flatpages/: admin.py  apps.py  urls.py
backend/apps/anime/: admin.py  apis.py  apps.py  filters.py  models.py  permissions.py  tasks.py
backend/apps/characters/: api.py  filters.py  models.py
backend/apps/faq/: admin.py  apps.py  models.py  urls.py  views.py
backend/apps/producers/: admin.py  filters.py  models.py
backend/apps/staff/: apps.py  models.py
backend/apps/staffs/: admin.py  api.py  apps.py  filters.py  schemas.py
backend/apps/tracker/: admin.py  apis.py  apps.py  models.py  serializers.py  views.py
backend/apps/trackers/: apps.py
backend/apps/user/: admin.py  apis.py  apps.py  backends.py  managers.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/backup/: default-DESKTOP-UD2F8NL-2022-06-03-113551.dump
backend/barista/: server.py
backend/barista/models/: user.py
backend/butler/: database.py  server.py
backend/butler/models/: user.py
backend/cache/: .gitignore
backend/components/scroll_area/: scroll_area.html  scroll_area.js  scroll_area.py
backend/components/text_editor/: text_editor.css  text_editor.html  text_editor.py
backend/components/vercel_hover/: vercel_hover.html  vercel_hover.js  vercel_hover.py
backend/core/: __init__.py  __requests_session__.py  admin.py  api.py  api_v1.py  apps.py  asgi.py  celery.py  settings.py  storages.py  urls.py  wsgi.py
backend/core/utilities/: CachedLimiterSession.py
backend/custom/user/: admin.py  models.py
backend/dependencies/: session.py
backend/django_core/: manage.py  test.py
backend/django_core/builder/: anime.py  genre.py  sitemap.py
backend/django_core/core/: api_v1.py  asgi.py  auth.py  celery.py  format.py  permissions.py  settings.py  sitemap.py  storages.py  urls.py  utility.py  views.py  wsgi.py
backend/django_core/mixins/: background_color.py  brightness.py
backend/django_core/parser/: _decorators.py  character.py  genre.py  producer.py  sitemap.py  staff.py  urls.py
backend/django_core/static/: .gitignore  _commonjsHelpers-_koz0vxr.js
backend/django_core/static_src/: main.ts  svelte.config.js  window.d.ts
backend/media/: server.py
backend/media/episode/: .gitignore
backend/models/: user.py
backend/schemas/: user.py
backend/settings/: database.py  settings.py  templates.py
backend/static/: css.js
backend/templates/: 400.html  403.html  404.html  500.html  base.html
backend/tsukaeru/: server.py  settings.py
backend/utilities/: get_current_user.py
backend/views/: __Init__.py  avatar.py
bots/discord/: Dockerfile  Pipfile  README.md  TODO.md  alembic.ini  benchmark.sh  config.py  conftest.py  database.py  docker-compose.yml  myapp.py  pyproject.toml  requirements.txt  settings.py  setup.py
discord/: .gitignore  TODO.md  alembic.ini  database.py  pyproject.toml  settings.py
discord/alembic/: README  env.py
discord/web/: main.py
seeder/: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  .prettierrc.yaml  LICENSE  Pipfile  README.md  Test2.py  alembic.ini  build.py  build_config.json  character.py  default.db  default.db-journal  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  eslint.config.js  eslint.config.mjs  http_cache.sqlite  main.py  package-lock.json  package.json  pyproject.toml  staff.py  svelte.config.js  svelte.config.mjs  tailwind.config.ts  test.db  test.py  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
seeder/.husky/: pre-commit
seeder/alembic/: env.py
seeder/src/: app.css  app.html  demo.spec.ts  global.d.ts
seeder/src_pyloid/: main.py
tools/seeder/: .gitignore  Pipfile  README  _session.py  character.py  pyproject.toml  seed.py  staff.py  studios.py  test.py
tracker/: .dockerignore  .gitignore  .python-version  Dockerfile  deploy.sh  docker-compose.yml  pyproject.toml  test-2.py  test-3.py  test.5.py  test.json  test.jsonl  test.py  test2.jsonl  udp_client.py  udp_server.py
tracker/backend/: .dockerignore  Dockerfile  pyproject.toml  test.py
tracker/frontend/: .dockerignore  .gitignore  .prettierrc  Dockerfile  app.json  components.json  eslint.config.mjs  next.config.ts  package-lock.json  package.json  svgr.d.ts  tsconfig.json
tracker/haproxy/: Dockerfile  haproxy.cfg
tracker/nginx/: nginx.conf
tracker/src/: run.py  test.py
tracker/tests/: test_webrtc.html  test_websocket.html  websocket_client.py
tracker/web/: package-lock.json  package.json  svelte.config.js
(+5650 files in other folders)
