[tool.poetry]
name = "discord"
version = "0.1.0"
description = ""
authors = ["baseplate-admin <61817579+baseplate-admin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.4.0"
sqlalchemy = {extras = ["postgresql-asyncpg"], version = "^2.0.37"}
aiohttp-jinja2 = "^1.6"
alembic = "^1.14.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
aiohttp-devtools = "^1.1"
poethepoet = "^0.32.1"

[tool.poe.tasks]
dev = 'adev runserver ./web/main.py --app-factory=aiohttp_app'

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]
