[tool.poetry]
name = "seeder-flet"
version = "0.1.0"
description = ""
authors = ["tokitouq <suneeth.since2005@gmail.com>", "baseplate-admin <61817579+baseplate-admin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flet = ">=0.22.1"
selectolax = "^0.3.21"
requests-ratelimiter = "^0.7.0"
requests = "^2.32.3"
requests-cache = "^1.2.1"
alembic = "^1.13.2"
sqlalchemy = "^2.0.31"


[tool.poetry.group.dev.dependencies]
poethepoet = "^0.27.0"

[tool.poe.tasks]
dev = "flet run -d -r ./src/seeder_flet/main.py"


