[project]
name = "svelte_pyloid_boilerplate"
version = "0.0.1"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pyloid>=0.20.2,<0.21",
    "websockets>=14.2",
]

[dependency-groups]
dev = [
    "poethepoet>=0.32.1,<0.33",
    "black>=24.10.0,<25",
    "flake8>=7.1.1,<8",
    "pyinstaller>=6.11.1",
    "ruff>=0.9.2",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poe.tasks]
dev = "python ./run.py"
build = "python ./build.py"
format = "black ./"
lint = "flake8 ./"
