[project]
name = "tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "attrs>=25.1.0",
    "bencode-py>=4.0.0",
    "hypercorn[trio]>=0.17.3",
    "quart>=0.20.0",
    "quart-redis>=2.0.0",
    "quart-trio>=0.12.0",
    "redis[hiredis]>=4.6.0",
    "trio>=0.29.0",
]
