[tool.poetry]
name = "discord"
version = "0.1.0"
description = ""
authors = ["baseplate-admin <61817579+baseplate-admin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.1.1"
sqlalchemy = {extras = ["postgresql-asyncpg"], version = "^2.0.4"}
aiohttp-jinja2 = "^1.5"
alembic = "^1.9.4"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
aiohttp-devtools = "^1.0.post0"
poethepoet = "^0.18.1"

[tool.poe.tasks]
dev = 'adev runserver ./web/main.py --app-factory=aiohttp_app'

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]
