[tool.poetry]
name = "seeder"
version = "0.1.0"
description = ""
authors = ["baseplate-admin <61817579+baseplate-admin@users.noreply.github.com>"]
license = "AGPL-v3-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
humanize = "^4.9.0"
termcolor = "^2.3.0"
requests-cache = {extras = ["redis"], version = "^1.1.1"}
requests-ratelimiter = "*"
python-dotenv = "^1.0.0"
selectolax = "*"
httpx = "^0.25.1"
python-dateutil = "^2.8.2"
bing-image-downloader = "^1.1.2"
youtube-search = "^2.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
poethepoet = "^0.24.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.poe.tasks]
seed_character = 'python seed.py character'
seed_staff = 'python seed.py staff'
seed_genre = 'python seed.py genre'
seed_themes = 'python seed.py theme'
seed_producers = 'python seed.py producer'
seed_animes = 'python seed.py anime'
