[tool.poetry]
name = "seeder"
version = "0.1.0"
description = ""
authors = ["baseplate-admin <61817579+baseplate-admin@users.noreply.github.com>"]
license = "AGPL-v3-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
humanize = "^4.10.0"
termcolor = "^2.4.0"
requests-cache = {extras = ["redis"], version = "^1.2.1"}
requests-ratelimiter = "*"
python-dotenv = "^1.0.1"
selectolax = "*"
httpx = "^0.27.2"
python-dateutil = "^2.9.0"
bing-image-downloader = "^1.1.2"
youtube-search = "^2.1.2"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
poethepoet = "^0.28.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.poe.tasks]
seed_character = 'python seed.py character'
seed_staff = 'python seed.py staff'
seed_genre = 'python seed.py genre'
seed_themes = 'python seed.py theme'
seed_producers = 'python seed.py producer'
seed_animes = 'python seed.py anime'
