[project]
name = "tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.8.0",
    "attrs>=25.1.0",
    "bencode-py>=4.0.0",
    "flask-orjson>=2.0.0; platform.python_implementation == 'CPython'",
    "hypercorn>=0.17.3",
    "quart>=0.20.0",
    "quart-cors>=0.8.0",
    "quart-redis>=3.0.0",
    "redis[hiredis]>=5.2.1",
    "uvloop>=0.21.0; sys_platform == 'linux'",
]

[tool.setuptools]
packages = ["coreproject_tracker"]

[project.scripts]
coreproject_tracker = "coreproject_tracker.cli:main"

[dependency-groups]
dev = [
    "py-spy>=0.4.0",
]
lint = [
    "ruff>=0.9.7",

]

[tool.uv]
default-groups = ["dev", "lint"]
package = true

[tool.ruff.lint]
extend-select = ["I"]  # Enables isort rules

[tool.ruff.format]
skip-magic-trailing-comma = false  # Avoids conflict with isort.split-on-trailing-comma

[tool.ruff.lint.isort]
split-on-trailing-comma = true  # Keep this aligned with format.skip-magic-trailing-comma
combine-as-imports = true
