[tool.poetry]
name = "shinobi"
version = "0.1.0"
description = ""
authors = ["baseplate-admin <61817579+baseplate-admin@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
selectolax = "^0.3.21"
requests-ratelimiter = "^0.7.0"
requests = "^2.32.3"
requests-cache = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
